--- a/src/mainLab.ipynb
+++ b/src/mainLab.ipynb
@@ -31,10 +31,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11a442a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing OpenFOAM case: D:/tempData_depot/simData_CandC/ttuMSop0900.4/\n",
+      "Probe read from: D:/tempData_depot/simData_CandC/ttuMSop0900.4//postProcessing/probes.V1\n",
+      "Target profile read from:--- D:/tempData_depot/simData_CandC/ttuMSop0900.4/blwtProfiles_O15.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1008x432 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "caseDir = 'D:/tempData_depot/simData_CandC/ttuMSop0900.4/'\n",
     "probeName = 'probes.V1'\n",
