--- a/src/tngE2.ipynb
+++ b/src/tngE2.ipynb
@@ -20,7 +20,7 @@
     "import foamDataHandler as foam\n",
     "import windLoadCaseProcessors as wProc\n",
     "import windPlotters as wPlt\n",
-    "import windBasics as wind\n"
+    "import wind\n"
    ]
   },
   {
@@ -710,7 +710,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+    "hash": "a101310663fe7ba3133d191ee0beb8e8ff0a9e31c81b0bc47e021bdd8a76f1c3"
    }
   }
  },
