--- a/src/lab_infl_tngE2.ipynb
+++ b/src/lab_infl_tngE2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,25 +17,27 @@
     "\n",
     "# import sys\n",
     "# sys.path.append(r'D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/CodeRepositories/windCalc/src')\n",
-    "import foamDataHandler as foam\n",
+    "import foam\n",
     "import windLoadCaseProcessors as wProc\n",
     "import windPlotters as wPlt\n",
-    "import wind\n"
+    "import wind\n",
+    "\n",
+    "import random\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "id": "5003a4cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1d5d44938e0>"
+       "<matplotlib.legend.Legend at 0x13825cb4bb0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -106,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "95e41dc9",
    "metadata": {},
    "outputs": [],
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "7b490ce8",
    "metadata": {},
    "outputs": [],
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "eff19239",
    "metadata": {},
    "outputs": [],
@@ -161,25 +163,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "21c154ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing OpenFOAM case:\tD:/tempData_depot/simData_CandC/ttuPSpcOP15.7\n",
+      "Probe read from:\t\tD:/tempData_depot/simData_CandC/ttuPSpcOP15.7/postProcessing/probes.x0y0\n",
+      "Target profile read from:\tNone\n",
+      "  >> Reading probe data ...\n",
+      "             << Done!\n",
+      "  >> Processing profile data.\n",
+      "             << Done!\n",
+      "  >> Writing data to file.\n",
+      "             << Done!\n",
+      "  >> Finished reading probe data.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1008x432 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# vwtOrig = foam.processVelProfile(\n",
-    "#                         caseDir='D:/tempData_depot/simData_CandC/ttuPSpcOP15.7', \n",
-    "#                         probeName='probes.x0y0', \n",
-    "#                         name='VWTorig',\n",
-    "#                         targetProfile=None,\n",
-    "#                         normalize=True,\n",
-    "#                         H=H,\n",
-    "#                         writeToDataFile=True,\n",
-    "#                         trimTimeSegs=[[0,0.5]],\n",
-    "#                         showPlots=True,\n",
-    "#                         exportPlots=True)[0]\n",
+    "vwtOrig = foam.processVelProfile(\n",
+    "                        caseDir='D:/tempData_depot/simData_CandC/ttuPSpcOP15.7', \n",
+    "                        probeName='probes.x0y0', \n",
+    "                        name='VWTorig',\n",
+    "                        targetProfile=None,\n",
+    "                        normalize=True,\n",
+    "                        H=H,\n",
+    "                        writeToDataFile=True,\n",
+    "                        trimTimeSegs=[[0,0.5]],\n",
+    "                        showPlots=True,\n",
+    "                        exportPlots=True)[0]\n",
     "\n",
-    "# vwtOrig.nSpectAvg = 64\n",
-    "# vwtOrig.reAnalyze()"
+    "vwtOrig.nSpectAvg = 64\n",
+    "vwtOrig.Update()"
    ]
   },
   {
@@ -630,23 +658,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "e09d8131",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "12.54255496736732"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'method': 'GumbelBlue', 'N': 15, 'P': 0.8}\n"
+     ]
     }
    ],
    "source": [
-    "target.Uh"
+    "peakMethods = {\n",
+    "    'minmax':None,\n",
+    "    'GumbleBlue':{'method':'GumbelBlue', 'N':10, 'P':0.8},\n",
+    "}\n",
+    "\n",
+    "x = peakMethods['GumbleBlue']\n",
+    "x['method'] = \n",
+    "x['N'] = 15\n",
+    "print(x)"
    ]
   },
   {
@@ -710,7 +743,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "a101310663fe7ba3133d191ee0beb8e8ff0a9e31c81b0bc47e021bdd8a76f1c3"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
