--- a/src/lab_io.ipynb
+++ b/src/lab_io.ipynb
@@ -11059,12 +11059,16 @@
     "vtkTimesNum = np.asarray(vtkTimes,dtype=float)\n",
     "vtkTimesSorted = sorted(zip(vtkTimesNum,vtkTimes),key=lambda x: x[0])\n",
     "vtkTimesSorted = list(vtkTimesSorted)\n",
+    "\n",
     "for v in vtkTimesSorted:\n",
     "    srcFile = vtkDir+'/'+v[1]+'/'+vtkName\n",
     "    newName = 'p_'+str(int(round(v[0]*10000,4))).zfill(7)+'.vtk'\n",
     "    destFile = vtkOutDir+'/'+newName\n",
-    "    print(srcFile+'-->'+newName)\n",
-    "    shutil.copy(srcFile,destFile)\n"
+    "    try:\n",
+    "        shutil.copy(srcFile,destFile)\n",
+    "        print(srcFile+'-->'+newName)\n",
+    "    except:\n",
+    "        print('ERROR! Skipping '+srcFile)"
    ]
   },
   {
