--- a/src/lab_wtProc.ipynb
+++ b/src/lab_wtProc.ipynb
@@ -12,7 +12,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import wio\n",
-    "import wind"
+    "import wind\n",
+    "import windCAD"
    ]
   },
   {
@@ -710,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "8a5c3191",
    "metadata": {},
    "outputs": [
@@ -794,7 +795,7 @@
     "# edge zone doesn't divide properly: 3e-4 with ASCE  np.array([(xMid2, yMid2), (xMax, yMid2), (xMax, yMax), (xMid2, yMax), (xMid2, yMid2)]), # subzone 2  \n",
     "nominalPanelAreas = [5e-5,1e-4,1.001e-4] # 7e-5, 8e-5, 9e-5] #5e-5, 1e-4]\n",
     "\n",
-    "myface = wind.face(\n",
+    "myface = windCAD.face(\n",
     "                name='Roof',\n",
     "                ID=0,\n",
     "                bldg='TTU',\n",
@@ -816,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "d3277f24",
    "metadata": {},
    "outputs": [
