--- a/src/lab_windCAD.ipynb
+++ b/src/lab_windCAD.ipynb
@@ -483,7 +483,7 @@
     "p0Idx = 30\n",
     "_, _, p0OfT = foam.readProbe(probeName='probes.V0', postProcDir=lesCase+'postProcessing/', field='p', trimTimeSegs=[[0,1.0]],)\n",
     "\n",
-    "pOfTfile = lesCase+'postProcessing/wallPressure_VTK/all_pOfT.npy'\n",
+    "pOfTfile = lesCase+'postProcessing/wallPressure_pOfT_TNGtaps.npy'\n",
     "pOfT = np.load(pOfTfile)\n",
     "m,n = np.shape(pOfT)\n",
     "pOfT = np.reshape(pOfT,(1,m,n))\n",
@@ -532,11 +532,11 @@
    "source": [
     "f = 1\n",
     "fc = ttu[f]\n",
-    "a = 2\n",
+    "a = 3\n",
     "d = 2\n",
     "fldRange=[-2,1]\n",
     "\n",
-    "fig = plt.figure(figsize=[20,15])\n",
+    "fig = plt.figure(figsize=[10,7.5])\n",
     "ax = fig.add_subplot()\n",
     "ttu.plotPanelCpStatContour(fieldName='mean',dxnIdx=d,aIdx=a,showValueText=False,ax=ax,fldRange=fldRange)\n",
     "# ttu.plotPanels(ax=ax,aIdx=a)\n",
@@ -545,10 +545,11 @@
     "ttu.plotZones(ax=ax)\n",
     "# ttu.plotTaps(ax=ax,showTapNo=True,fontsize=10)\n",
     "# ttu.plotTribs(ax=ax)\n",
+    "ax.set_title('BLWT')\n",
     "ax.axis('equal')\n",
     "\n",
     "d = 0\n",
-    "fig = plt.figure(figsize=[20,15])\n",
+    "fig = plt.figure(figsize=[10,7.5])\n",
     "ax = fig.add_subplot()\n",
     "ttuLES.plotPanelCpStatContour(fieldName='mean',dxnIdx=d,aIdx=a,showValueText=False,ax=ax,fldRange=fldRange)\n",
     "# ttuLES.plotPanels(ax=ax,aIdx=a)\n",
@@ -557,6 +558,7 @@
     "ttuLES.plotZones(ax=ax)\n",
     "# ttuLES.plotTaps(ax=ax,showTapNo=True,fontsize=10)\n",
     "# ttuLES.plotTribs(ax=ax)\n",
+    "ax.set_title('LES')\n",
     "ax.axis('equal')"
    ]
   },
@@ -759,7 +761,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "ttu.plotTapCpStatsPerAoA(fields=['mean','std'], fldRange=[-2,1],xticks=np.round(ttu.AoA,0),pageNo_xy=(0.5,0.06),nCols=15, figsize=[20,20])"
+    "ttu.plotTapCpStatsPerAoA(fldRange=[-8,2.3],xticks=np.round(ttu.AoA,0),pageNo_xy=(0.5,0.06),nCols=13, figsize=[25,20])"
    ]
   }
  ],
