--- a/src/notebooks/FFS/FFS_caseSetup.ipynb
+++ b/src/notebooks/FFS/FFS_caseSetup.ipynb
@@ -29,12 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "d7fae49d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "caseDir = \"D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/01-revisitOfWindLoadEvaluation/01.02_Re_effect/Data/FFS/\""
+    "caseDir = \"D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/01-revisitOfWindLoadEvaluation/01.02_Re_effect/Data/FFS/\"\n",
+    "overwrite = True"
    ]
   },
   {
@@ -48,37 +49,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "3da48629",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\OneDrive - The University of Western Ontario\\Documents\\PhD\\Thesis\\CodeRepositories\\windCalc\\src\\foam.py:623: UserWarning: The file D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/01-revisitOfWindLoadEvaluation/01.02_Re_effect/Data/FFS/probes.SSL.z_0 exists and will be overwritten.\n",
-      "  warnings.warn(msg)\n"
+     "ename": "Exception",
+     "evalue": "The file D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/01-revisitOfWindLoadEvaluation/01.02_Re_effect/Data/FFS/probes.SSL.y_0 already exists.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15324\\1296596105.py\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mpts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumn_stack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mfoam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriteProbeDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpts\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moverwrite\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\OneDrive - The University of Western Ontario\\Documents\\PhD\\Thesis\\CodeRepositories\\windCalc\\src\\foam.py\u001b[0m in \u001b[0;36mwriteProbeDict\u001b[1;34m(file, points, fields, writeControl, writeInterval, includeLines, overwrite, precision, width)\u001b[0m\n\u001b[0;32m    636\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    637\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The file \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" already exists.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 638\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    639\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    640\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The file \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" exists and will be overwritten.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mException\u001b[0m: The file D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/01-revisitOfWindLoadEvaluation/01.02_Re_effect/Data/FFS/probes.SSL.y_0 already exists."
      ]
     }
    ],
    "source": [
-    "zLoc = 0\n",
-    "file = caseDir+\"probes.SSL.z_\"+str(zLoc)\n",
+    "yLoc = 0\n",
+    "file = caseDir+\"probes.SSL.y_\"+str(yLoc)\n",
     "\n",
     "H = 0.08\n",
     "xMin, xMax = 0.0, 2.0*H\n",
-    "yMin, yMax = 1.001*H, 2.0*H\n",
+    "zMin, zMax = 1.001*H, 2.0*H\n",
     "d = 0.02*H\n",
-    "Nx, Ny = int(np.round((xMax-xMin)/d,0)), int(np.round((yMax-yMin)/d,0))\n",
+    "Nx, Nz = int(np.round((xMax-xMin)/d,0)), int(np.round((zMax-zMin)/d,0))\n",
     "\n",
-    "x, y = np.meshgrid(np.linspace(xMin, xMax, Nx), np.linspace(yMin, yMax, Ny))\n",
+    "x, z = np.meshgrid(np.linspace(xMin, xMax, Nx), np.linspace(zMin, zMax, Nz))\n",
     "x = x.flatten()\n",
-    "y = y.flatten()\n",
-    "z = np.ones_like(x)*zLoc\n",
+    "z = z.flatten()\n",
+    "y = np.ones_like(x)*yLoc\n",
     "\n",
     "pts = np.column_stack((x,y,z))\n",
     "\n",
-    "foam.writeProbeDict(file,pts,overwrite=False)"
+    "foam.writeProbeDict(file,pts,overwrite=overwrite)"
    ]
   },
   {
@@ -92,30 +97,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d4d1b0cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "zLoc = 0\n",
-    "file = caseDir+\"probes.FBL.z_\"+str(zLoc)\n",
+    "yLoc = 0\n",
+    "file = caseDir+\"probes.FBL.y_\"+str(yLoc)\n",
     "\n",
     "H = 0.08\n",
-    "xMin, xMax = -0.1*H, 0.0001*H\n",
-    "yMin, yMax = 0.0, 1.0*H\n",
+    "xMin, xMax = 0.0001*H, 0.1*H\n",
+    "zMin, zMax = 0.0002, 1.0*H\n",
     "d = 0.02*H\n",
-    "Nx, Ny = 50, int(np.round((yMax-yMin)/d,0))\n",
+    "Nx, Nz = 50, int(np.round((zMax-zMin)/d,0))\n",
     "\n",
-    "X = np.flip(-1*np.logspace(np.log10(np.abs(xMax)), np.log10(np.abs(xMin)), Nx))\n",
+    "X = -1.0*np.flip(np.logspace(np.log10(xMin), np.log10(xMax), Nx))\n",
     "\n",
-    "x, y = np.meshgrid(X, np.linspace(yMin, yMax, Ny))\n",
+    "x, z = np.meshgrid(X, np.linspace(zMin, zMax, Nz))\n",
     "x = x.flatten()\n",
-    "y = y.flatten()\n",
-    "z = np.ones_like(x)*zLoc\n",
+    "z = z.flatten()\n",
+    "y = np.ones_like(x)*yLoc\n",
     "\n",
     "pts = np.column_stack((x,y,z))\n",
     "\n",
-    "foam.writeProbeDict(file,pts,overwrite=False)"
+    "foam.writeProbeDict(file,pts,overwrite=overwrite)"
    ]
   },
   {
@@ -129,94 +134,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "d18380b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\OneDrive - The University of Western Ontario\\Documents\\PhD\\Thesis\\CodeRepositories\\windCalc\\src\\foam.py:623: UserWarning: The file D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/01-revisitOfWindLoadEvaluation/01.02_Re_effect/Data/FFS/probes.surfPres.z_0 exists and will be overwritten.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "zLoc = 0\n",
-    "file = caseDir+\"probes.surfPres.z_\"+str(zLoc)\n",
+    "yLoc = 0\n",
+    "file = caseDir+\"probes.surfPres.y_\"+str(yLoc)\n",
     "\n",
     "H = 0.08\n",
     "d = 0.02*H\n",
     "xMax = 6.0*H\n",
-    "Nx, Ny = int(np.round(xMax/d,0)), int(np.round(H/d,0))\n",
+    "Nx, Nz = int(np.round(xMax/d,0)), int(np.round(H/d,0))\n",
     "\n",
-    "y1 = np.linspace(0.0, 0.99*H, Ny)\n",
-    "x1 = np.ones_like(y1)*0.0\n",
+    "z1 = np.linspace(0.001, 0.99*H, Nz)\n",
+    "x1 = np.ones_like(z1)*-0.0001\n",
     "\n",
     "x2 = np.linspace(0.0,xMax,Nx)\n",
-    "y2 = np.ones_like(x2)*H\n",
+    "z2 = np.ones_like(x2)*H\n",
     "\n",
     "x = np.append(x1,x2)\n",
-    "y = np.append(y1,y2)\n",
+    "z = np.append(z1,z2)\n",
     "\n",
-    "z = np.ones_like(x)*zLoc\n",
+    "y = np.ones_like(x)*yLoc\n",
     "\n",
     "pts = np.column_stack((x,y,z))\n",
     "\n",
-    "foam.writeProbeDict(file,pts,overwrite=False,fields=['p'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "3a94525d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import winsound\n",
-    "frequency = 100  # Set Frequency To 2500 Hertz\n",
-    "duration = 1000  # Set Duration To 1000 ms == 1 second\n",
-    "winsound.Beep(frequency, duration)\n",
-    "# winsound.Beep(5000, 1000)\n",
-    "# winsound.Beep(200, 1000)\n",
-    "# winsound.Beep(1000, 1000)\n",
-    "# winsound.Beep(2000, 1000)\n",
-    "winsound.PlaySound()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "a6cddee7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pyaudio\n",
-    "\n",
-    "# Generate a random signal with a sampling rate of 44100 Hz and a duration of 1 second\n",
-    "sampling_rate = 44100\n",
-    "duration = 1\n",
-    "num_samples = int(sampling_rate * duration)\n",
-    "signal = np.random.normal(0, 1, num_samples)\n",
-    "\n",
-    "# Create an audio player object\n",
-    "p = pyaudio.PyAudio()\n",
-    "\n",
-    "# Open a stream for playing the signal\n",
-    "stream = p.open(format=pyaudio.paFloat32,\n",
-    "                channels=1,\n",
-    "                rate=sampling_rate,\n",
-    "                output=True)\n",
-    "\n",
-    "# Play the signal\n",
-    "stream.write(signal.astype(np.float32).tobytes())\n",
-    "\n",
-    "# Stop the stream and close the player object\n",
-    "stream.stop_stream()\n",
-    "stream.close()\n",
-    "p.terminate()\n"
+    "foam.writeProbeDict(file,pts,overwrite=overwrite,fields=['p'])"
    ]
   }
  ],
