--- a/src/notebooks/peakML/exploreDataSet.ipynb
+++ b/src/notebooks/peakML/exploreDataSet.ipynb
@@ -101,7 +101,8 @@
     "print(f\"Shape of all cpstats: {cpstats.shape}\")\n",
     "print(f\"Shape of output for the ML: {(cpstats.shape[0], 8)}  (does not need to predict 'minCp', and 'maxCp')\")\n",
     "\n",
-    "print(f\"\\nThe data expantion is done by growing {cpTH.shape[0]}.\")"
+    "print(f\"\\nThe data expantion is done by growing {cpTH.shape[0]}.\")\n",
+    "\n"
    ]
   },
   {
@@ -491,7 +492,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -509,7 +510,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "a101310663fe7ba3133d191ee0beb8e8ff0a9e31c81b0bc47e021bdd8a76f1c3"
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
    }
   }
  },
