--- a/src/notebooks/FFS/FFS_caseSetup.ipynb
+++ b/src/notebooks/FFS/FFS_caseSetup.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "d7fae49d",
    "metadata": {},
    "outputs": [],
@@ -49,20 +49,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "3da48629",
    "metadata": {},
    "outputs": [
     {
-     "ename": "Exception",
-     "evalue": "The file D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/01-revisitOfWindLoadEvaluation/01.02_Re_effect/Data/FFS/probes.SSL.y_0 already exists.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_15324\\1296596105.py\u001b[0m in \u001b[0;36m<cell line: 17>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mpts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumn_stack\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mfoam\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriteProbeDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mpts\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0moverwrite\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mD:\\OneDrive - The University of Western Ontario\\Documents\\PhD\\Thesis\\CodeRepositories\\windCalc\\src\\foam.py\u001b[0m in \u001b[0;36mwriteProbeDict\u001b[1;34m(file, points, fields, writeControl, writeInterval, includeLines, overwrite, precision, width)\u001b[0m\n\u001b[0;32m    636\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0moverwrite\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    637\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The file \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" already exists.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 638\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    639\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    640\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"The file \"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\" exists and will be overwritten.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mException\u001b[0m: The file D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/01-revisitOfWindLoadEvaluation/01.02_Re_effect/Data/FFS/probes.SSL.y_0 already exists."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num in x: 100, Num in z: 50, Total: 5000\n"
      ]
     }
    ],
@@ -83,7 +78,8 @@
     "\n",
     "pts = np.column_stack((x,y,z))\n",
     "\n",
-    "foam.writeProbeDict(file,pts,overwrite=overwrite)"
+    "print(f\"Num in x: {Nx}, Num in z: {Nz}, Total: {Nx*Nz}\")\n",
+    "# foam.writeProbeDict(file,pts,overwrite=overwrite)"
    ]
   },
   {
@@ -97,10 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "d4d1b0cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num in x: 50, Num in z: 50, Total: 2500\n"
+     ]
+    }
+   ],
    "source": [
     "yLoc = 0\n",
     "file = caseDir+\"probes.FBL.y_\"+str(yLoc)\n",
@@ -120,7 +124,8 @@
     "\n",
     "pts = np.column_stack((x,y,z))\n",
     "\n",
-    "foam.writeProbeDict(file,pts,overwrite=overwrite)"
+    "print(f\"Num in x: {Nx}, Num in z: {Nz}, Total: {Nx*Nz}\")\n",
+    "# foam.writeProbeDict(file,pts,overwrite=overwrite)"
    ]
   },
   {
@@ -134,10 +139,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "d18380b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num in x: 300, Num in z: 50, Total: 350\n"
+     ]
+    }
+   ],
    "source": [
     "yLoc = 0\n",
     "file = caseDir+\"probes.surfPres.y_\"+str(yLoc)\n",
@@ -160,7 +173,9 @@
     "\n",
     "pts = np.column_stack((x,y,z))\n",
     "\n",
-    "foam.writeProbeDict(file,pts,overwrite=overwrite,fields=['p'])"
+    "print(f\"Num in x: {Nx}, Num in z: {Nz}, Total: {Nx+Nz}\")\n",
+    "\n",
+    "# foam.writeProbeDict(file,pts,overwrite=overwrite,fields=['p'])"
    ]
   }
  ],
