--- a/src/notebooks/CandC_load/lab_DFSR_2.ipynb
+++ b/src/notebooks/CandC_load/lab_DFSR_2.ipynb
@@ -890,6 +890,23 @@
     "                            debugMode=True,\n",
     "                            figsize=[15,15])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.506265989467407\n"
+     ]
+    }
+   ],
+   "source": [
+    "wtVel_E2.Uh"
+   ]
   }
  ],
  "metadata": {
