--- a/src/notebooks/FFS/FFS_quickRuns.ipynb
+++ b/src/notebooks/FFS/FFS_quickRuns.ipynb
@@ -643,7 +643,8 @@
     "profs.plotProfile_basic2(yLimits=[0,5])\n",
     "profs.plotSpectra(normU='sigUi')\n",
     "\n",
-    "print(prof_ABL_05.Uh)"
+    "print(prof_ABL_05.Uh)\n",
+    "foam.meshSizeFromCutoffFreq"
    ]
   },
   {
