--- a/src/notebooks/FFS/FFS_quickRuns.ipynb
+++ b/src/notebooks/FFS/FFS_quickRuns.ipynb
@@ -1426,44 +1426,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting section sample to boundaryData inflow.\n",
-      "    Reading section sample from: D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/CodeRepositories/windCalc/data/sectSampleForInfl//postProcessing/sectionCuts/U_xNorm\n",
-      "    Writing boundaryData inflow to: D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/CodeRepositories/windCalc/data/sectSampleForInfl//constant/boundaryData/inlet/\n",
-      "    Shifting time by: -2.0002\n",
-      "    Writing points to: D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/CodeRepositories/windCalc/data/sectSampleForInfl//constant/boundaryData/inlet/points\n",
-      "    Writing velocity to: <output_dir> = D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/CodeRepositories/windCalc/data/sectSampleForInfl//constant/boundaryData/inlet/\n",
-      "    2.0002/U_xNorm.vtk \t-->  0.0/U\n",
-      "    Reordering velocity to match the points in existing 'points' file.\n",
-      "      Distance between the points: max = 5.1174213802848305e-06, mean = 2.0974485930105194e-07\n",
-      "    2.0004/U_xNorm.vtk \t-->  0.0002/U\n",
-      "    Reordering velocity to match the points in existing 'points' file.\n",
-      "      Distance between the points: max = 5.1174213802848305e-06, mean = 2.0974485930105194e-07\n",
-      "    2.0006/U_xNorm.vtk \t-->  0.0004/U\n",
-      "    Reordering velocity to match the points in existing 'points' file.\n",
-      "      Distance between the points: max = 5.1174213802848305e-06, mean = 2.0974485930105194e-07\n",
-      "    2.0008/U_xNorm.vtk \t-->  0.0006/U\n",
-      "    Reordering velocity to match the points in existing 'points' file.\n",
-      "      Distance between the points: max = 5.1174213802848305e-06, mean = 2.0974485930105194e-07\n",
-      "    2.001/U_xNorm.vtk \t-->  0.0008/U\n",
-      "    Skipping existing time step: 0.22/U\n",
-      "    Skipping existing time step: 0.2202/U\n",
-      "    Skipping existing time step: 0.2204/U\n",
-      "    Skipping existing time step: 0.2206/U\n"
+      "True\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "caseDir = r\"D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/CodeRepositories/windCalc/data/sectSampleForInfl/\"\n",
+    "# caseDir = r\"D:/OneDrive - The University of Western Ontario/Documents/PhD/Thesis/CodeRepositories/windCalc/data/sectSampleForInfl/\"\n",
     "\n",
-    "foam.convertSectionSampleToBoundaryDataInflow(caseDir, 'sectionCuts', 'U_xNorm', overwrite=False, pointDistanceTolerance=1e-3, shiftTimeBy=-2.0002)"
+    "# foam.convertSectionSampleToBoundaryDataInflow(caseDir, 'sectionCuts', 'U_xNorm', overwrite=False, pointDistanceTolerance=1e-3, shiftTimeBy=-2.0002)\n",
+    "\n",
+    "x = '0.0'\n",
+    "print(bool(x))"
    ]
   }
  ],
