--- a/src/notebooks/CandC_load/lab_TTU_TNG.ipynb
+++ b/src/notebooks/CandC_load/lab_TTU_TNG.ipynb
@@ -29,7 +29,7 @@
     "import windIO\n",
     "import wind\n",
     "import windCAD\n",
-    "import foam"
+    "import windOF as foam"
    ]
   },
   {
