--- a/src/notebooks/CandC_load/lab_TTU_TNG_tuner.ipynb
+++ b/src/notebooks/CandC_load/lab_TTU_TNG_tuner.ipynb
@@ -2531,4 +2531,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
