--- a/src/notebooks/NRCtests/nrcCorrection.ipynb
+++ b/src/notebooks/NRCtests/nrcCorrection.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "The wind tunnel simulation of low-rise building wind loads has unique challenges related to their small sizes compared to the ABL. One of the challenges is satisfying the Jensen number similitude condition due to failure to model the full boundary layer thickness. ASCE 49-21 allows the limited matching of the lowest atmospheric surface layer instead of the full boundary layer thickness for low-rise buildings. This challenge also results in the lack of achieving equilibrium boundary layer where the velocity and turbulence intensity profiles correspond to different roughness length $z_0$ values. According to Tieleman (2003), priority should be given to the turbulence intensity as a primary target to match.\n",
+    "\n",
+    "The conversion factors discussed below are intended to convert a given wind tunnel data (in this case the Concordia tests of the $45^\\circ$ gable) from the exposure condition it represents best as fitted by $I_u$ to the standard open terrain condition os $z_0=0.03m$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,11 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import wind\n",
     "import windCodes"
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +91,9 @@
     "Z = [0.002,0.005,0.01,0.015,0.02,0.03,0.04,0.05,0.06,0.07,0.08,0.09,0.1,0.12,0.14,0.16,0.18,0.2,0.22,0.24,0.26,0.28,0.3,]\n",
     "U = [4.18,7.14,7.61,8.31,8.69,9.21,9.48,9.67,9.86,10.15,10.24,10.43,10.6,10.62,10.9,11.09,11.19,11.38,11.47,11.66,11.76,11.95,11.95,]\n",
     "Iu = [0.2915,0.1934,0.181,0.164,0.1543,0.136,0.1285,0.1247,0.126,0.12,0.1145,0.1064,0.1047,0.103,0.097,0.096,0.0935,0.0925,0.088,0.0897,0.0845,0.082,0.079,]\n",
+    "\n",
+    "# spectFile = r'D:/ConcSpect.csv'\n",
+    "# spect = pd.read_csv(spectFile, header=0, index_col=None)\n",
     "\n",
     "conc = wind.profile(name='Concordia', Z=Z, H=H*lScl, stats={'U':np.array(U,float), 'Iu':np.array(Iu, float),})"
    ]
@@ -92,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +204,7 @@
        "1.5196332219986075"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,10 +233,12 @@
    "source": [
     "# References\n",
     "\n",
-    "1. ESDU, 1982. Strong Winds in the Atmospheric Boundary Layer. Part I: mean-hourly wind speeds, Item No. 82026. Eng. Sci. Data Unit, Data Items.\n",
-    "2. ESDU, 1993. Characteristics of atmospheric turbulence near the ground, Part II: single point data for strong winds (neutral atmosphere), Item No. 85020. Eng. Sci. Data Unit, Data Items.\n",
-    "3. St Pierre, L.M., Kopp, G.A., Surry, D., Ho, T.C.E., 2005. The UWO contribution to the NIST aerodynamic database for wind loads on low buildings: Part 2. Comparison of data with wind load provisions. J. Wind Eng. Ind. Aerodyn. 93, 31–59. https://doi.org/10.1016/j.jweia.2004.07.007\n",
-    "\n"
+    "1. ASCE/SEI, 2021. Wind tunnel testing for buildings and other structures ASCE/SEI 49-21, ASCE standard. American Society of Civil Engineers, Reston, VA, USA. \n",
+    "    https://doi.org/10.1061/9780784415740\n",
+    "2. ESDU, 1982. Strong Winds in the Atmospheric Boundary Layer. Part I: mean-hourly wind speeds, Item No. 82026. Eng. Sci. Data Unit, Data Items.\n",
+    "3. ESDU, 1993. Characteristics of atmospheric turbulence near the ground, Part II: single point data for strong winds (neutral atmosphere), Item No. 85020. Eng. Sci. Data Unit, Data Items.\n",
+    "4. St Pierre, L.M., Kopp, G.A., Surry, D., Ho, T.C.E., 2005. The UWO contribution to the NIST aerodynamic database for wind loads on low buildings: Part 2. Comparison of data with wind load provisions. J. Wind Eng. Ind. Aerodyn. 93, 31–59. https://doi.org/10.1016/j.jweia.2004.07.007\n",
+    "5. Tieleman, H.W., 2003. Wind tunnel simulation of wind loading on low-rise structures: a review. J. Wind Eng. Ind. Aerodyn. 91, 1627–1649. https://doi.org/10.1016/j.jweia.2003.09.021\n"
    ]
   }
  ],
