--- a/src/notebooks/NRCtests/nrcNB_Gable.ipynb
+++ b/src/notebooks/NRCtests/nrcNB_Gable.ipynb
@@ -1,16 +1,15 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "0ec03939",
+   "id": "97b59e48",
    "metadata": {},
    "source": [
     "<font size=\"85\">New Brunswick 27° Gable Roof Building: Wind Tunnel Test</font> <br>\n",
     "***\n",
     "Feb 25, 2023\n",
     "\n",
-    "# Project description\n",
+    "# <a id='toc1_'></a>[Project description](#toc0_)\n",
     "\n",
     "The study building is a $27^\\circ$ gable roof building with ridge height 9.8 m, width 14 m, and length 41 m. It is situated in a suburban surrounding all around except the North end. The North is exposed to an open terrain from the airport except for a couple of houses immediately next to it. \n",
     "\n",
@@ -47,12 +46,55 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "9dfa7533",
+   "id": "186c8d4a",
    "metadata": {},
    "source": [
-    "# Basic definitions"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [Project description](#toc1_)    \n",
+    "- [Basic definitions](#toc2_)    \n",
+    "    - [Files and directories](#toc2_1_1_)    \n",
+    "    - [General parameters](#toc2_1_2_)    \n",
+    "    - [Scaling](#toc2_1_3_)    \n",
+    "- [Building Geometry](#toc3_)    \n",
+    "    - [Basic geometry](#toc3_1_1_)    \n",
+    "    - [Basics of faces](#toc3_1_2_)    \n",
+    "    - [Zone dictionary](#toc3_1_3_)    \n",
+    "    - [Face objects](#toc3_1_4_)    \n",
+    "    - [Building objects](#toc3_1_5_)    \n",
+    "    - [Geometry plots](#toc3_1_6_)    \n",
+    "- [Load and process data](#toc4_)    \n",
+    "  - [Field data](#toc4_1_)    \n",
+    "  - [Wind tunnel](#toc4_2_)    \n",
+    "    - [Wind field](#toc4_2_1_)    \n",
+    "    - [Pressure](#toc4_2_2_)    \n",
+    "- [Plot results](#toc5_)    \n",
+    "    - [Field data only](#toc5_1_1_)    \n",
+    "      - [Field data wind rose](#toc5_1_1_1_)    \n",
+    "    - [Wind field](#toc5_1_2_)    \n",
+    "      - [All profiles](#toc5_1_2_1_)    \n",
+    "      - [Selected profiles and spectra](#toc5_1_2_2_)    \n",
+    "      - [WT vs. Field vs. ESDU](#toc5_1_2_3_)    \n",
+    "    - [Pressure](#toc5_1_3_)    \n",
+    "      - [$C_p$ contours](#toc5_1_3_1_)    \n",
+    "      - [$C_p$ vs. AoA per tap](#toc5_1_3_2_)    \n",
+    "      - [C&C pressure coefficients from codes](#toc5_1_3_3_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a id='toc2_'></a>[Basic definitions](#toc0_)"
    ]
   },
   {
@@ -78,10 +120,8 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "a3f35768",
-   "metadata": {
-    "tags": []
-   },
+   "id": "a4bdcdd6",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -105,18 +145,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "25ed0a05",
    "metadata": {},
    "source": [
-    "### Files and directories"
+    "### <a id='toc2_1_1_'></a>[Files and directories](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "243664c3",
+   "id": "15162498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,18 +175,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "4387a398",
    "metadata": {},
    "source": [
-    "### General parameters"
+    "### <a id='toc2_1_2_'></a>[General parameters](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "c43f39d7",
+   "id": "0ae0d568",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,12 +208,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "4a2c5c32",
+   "id": "9d745f09",
    "metadata": {},
    "source": [
-    "### Scaling\n",
+    "### <a id='toc2_1_3_'></a>[Scaling](#toc0_)\n",
     "The geometric length scale is decided based on the optimal fitting the model in the wind tunnel.\n",
     "$$ \\lambda_L=1:100 $$\n",
     "\n",
@@ -195,21 +230,18 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "a65acec9",
+   "id": "2266b255",
    "metadata": {},
    "source": [
-    "# Building Geometry"
+    "# <a id='toc3_'></a>[Building Geometry](#toc0_)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "9c6eae99",
    "metadata": {},
    "source": [
-    "### Basic geometry\n",
+    "### <a id='toc3_1_1_'></a>[Basic geometry](#toc0_)\n",
     "\n",
     "| Dimension | Unit |\n",
     "| --- | --- |\n",
@@ -222,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "94f02808",
+   "id": "00d6e940",
    "metadata": {},
    "outputs": [
     {
@@ -261,21 +293,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "31ad4aa7",
    "metadata": {},
    "source": [
-    "### Basics of faces"
+    "### <a id='toc3_1_2_'></a>[Basics of faces](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 256,
-   "id": "56bc2dbc",
-   "metadata": {
-    "tags": []
-   },
+   "id": "742c1acc",
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -331,18 +359,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "d72be241",
    "metadata": {},
    "source": [
-    "### Zone dictionary"
+    "### <a id='toc3_1_3_'></a>[Zone dictionary](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b4a4dd6d",
+   "id": "33b3b943",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,12 +442,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "0f7f13cd",
    "metadata": {},
    "source": [
-    "### Face objects"
+    "### <a id='toc3_1_4_'></a>[Face objects](#toc0_)"
    ]
   },
   {
@@ -889,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "861662b0",
+   "id": "00e2759a",
    "metadata": {},
    "outputs": [
     {
@@ -1283,18 +1307,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "ecbfb6bc",
    "metadata": {},
    "source": [
-    "### Building objects"
+    "### <a id='toc3_1_5_'></a>[Building objects](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "89715dcf",
+   "id": "55a1a2c8",
    "metadata": {},
    "outputs": [
     {
@@ -1335,12 +1357,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "304a782e",
    "metadata": {},
    "source": [
-    "### Geometry plots"
+    "### <a id='toc3_1_6_'></a>[Geometry plots](#toc0_)"
    ]
   },
   {
@@ -1516,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "bd7579df",
+   "id": "c61e3f8a",
    "metadata": {},
    "outputs": [
     {
@@ -1544,18 +1564,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56b50226",
+   "id": "4c2d1012",
    "metadata": {},
    "source": [
-    "# Load and process data"
+    "# <a id='toc4_'></a>[Load and process data](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65e12139",
    "metadata": {},
    "source": [
-    "## Field data"
+    "## <a id='toc4_1_'></a>[Field data](#toc0_)"
    ]
   },
   {
@@ -1744,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 456,
-   "id": "ea841df0",
+   "id": "a100cb39",
    "metadata": {},
    "outputs": [
     {
@@ -1790,21 +1809,18 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "84897859",
+   "id": "fb2cd177",
    "metadata": {},
    "source": [
-    "## Wind tunnel\n"
+    "## <a id='toc4_2_'></a>[Wind tunnel](#toc0_)\n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "61a6cb28",
    "metadata": {},
    "source": [
-    "### Wind field"
+    "### <a id='toc4_2_1_'></a>[Wind field](#toc0_)"
    ]
   },
   {
@@ -1880,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c845b8b8",
+   "id": "a4a69aa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1913,10 +1929,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a4c49eb",
    "metadata": {},
    "source": [
-    "### Pressure"
+    "### <a id='toc4_2_2_'></a>[Pressure](#toc0_)"
    ]
   },
   {
@@ -2500,7 +2515,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "60ec3d11",
+   "id": "76ab588c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2512,26 +2527,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "883cda60",
+   "id": "f2aca13a",
    "metadata": {},
    "source": [
-    "# Plot results"
+    "# <a id='toc5_'></a>[Plot results](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ba6192b9",
+   "id": "fbf4ee1a",
    "metadata": {},
    "source": [
-    "### Field data only"
+    "### <a id='toc5_1_1_'></a>[Field data only](#toc0_)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e1055620",
    "metadata": {},
    "source": [
-    "#### Field data wind rose"
+    "#### <a id='toc5_1_1_1_'></a>[Field data wind rose](#toc0_)"
    ]
   },
   {
@@ -2738,7 +2752,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3646243d",
+   "id": "3594cdc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2769,19 +2783,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "a1b00294",
    "metadata": {},
    "source": [
-    "### Wind field\n",
-    "#### All profiles"
+    "### <a id='toc5_1_2_'></a>[Wind field](#toc0_)\n",
+    "#### <a id='toc5_1_2_1_'></a>[All profiles](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "1ea9f2db",
+   "id": "85b92a46",
    "metadata": {},
    "outputs": [
     {
@@ -2862,10 +2874,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35085de0",
    "metadata": {},
    "source": [
-    "#### Selected profiles and spectra"
+    "#### <a id='toc5_1_2_2_'></a>[Selected profiles and spectra](#toc0_)"
    ]
   },
   {
@@ -2941,7 +2952,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "7a11617e",
+   "id": "686ca63f",
    "metadata": {},
    "outputs": [
     {
@@ -2977,10 +2988,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b065fcf",
    "metadata": {},
    "source": [
-    "#### WT vs. Field vs. ESDU"
+    "#### <a id='toc5_1_2_3_'></a>[WT vs. Field vs. ESDU](#toc0_)"
    ]
   },
   {
@@ -3120,7 +3130,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "46dbd70c",
+   "id": "b07db88f",
    "metadata": {},
    "outputs": [
     {
@@ -3138,13 +3148,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "851c9faa",
    "metadata": {},
    "source": [
-    "### Pressure\n",
-    "#### $C_p$ contours"
+    "### <a id='toc5_1_3_'></a>[Pressure](#toc0_)\n",
+    "#### <a id='toc5_1_3_1_'></a>[$C_p$ contours](#toc0_)"
    ]
   },
   {
@@ -3279,7 +3287,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "c9fe8585",
+   "id": "5671ff19",
    "metadata": {},
    "outputs": [
     {
@@ -3414,12 +3422,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "f0a5c65f",
    "metadata": {},
    "source": [
-    "#### $C_p$ vs. AoA per tap"
+    "#### <a id='toc5_1_3_2_'></a>[$C_p$ vs. AoA per tap](#toc0_)"
    ]
   },
   {
@@ -3690,7 +3696,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "ce608fea",
+   "id": "7473b5ec",
    "metadata": {},
    "outputs": [
     {
@@ -3732,12 +3738,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "40c35bf4",
    "metadata": {},
    "source": [
-    "#### C&C pressure coefficients from codes"
+    "#### <a id='toc5_1_3_3_'></a>[C&C pressure coefficients from codes](#toc0_)"
    ]
   },
   {
