--- a/src/notebooks/NRCtests/nrcNB_Multispan.ipynb
+++ b/src/notebooks/NRCtests/nrcNB_Multispan.ipynb
@@ -1,16 +1,15 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "0ec03939",
+   "id": "9c653ac9",
    "metadata": {},
    "source": [
     "<font size=\"85\">New Brunswick 27° Gable Roof Building: Wind Tunnel Test</font> <br>\n",
     "***\n",
     "Feb 25, 2023\n",
     "\n",
-    "## Project description\n",
+    "## <a id='toc1_1_'></a>[Project description](#toc0_)\n",
     "\n",
     "The study building is a $27^\\circ$ gable roof building with ridge height 9.8 m, width 14 m, and length 41 m. It is situated in a suburban surrounding all around except the North end. The North is exposed to an open terrain from the airport except for a couple of houses immediately next to it. \n",
     "\n",
@@ -47,12 +46,50 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "9dfa7533",
+   "id": "d5875423",
    "metadata": {},
    "source": [
-    "## Basic definitions"
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [Project description](#toc1_1_)    \n",
+    "  - [Basic definitions](#toc1_2_)    \n",
+    "    - [Files and directories](#toc1_2_1_)    \n",
+    "    - [General parameters](#toc1_2_2_)    \n",
+    "    - [Scaling](#toc1_2_3_)    \n",
+    "  - [Building Geometry](#toc1_3_)    \n",
+    "    - [Basic geometry](#toc1_3_1_)    \n",
+    "    - [Basics of faces](#toc1_3_2_)    \n",
+    "    - [Zone dictionary](#toc1_3_3_)    \n",
+    "    - [Face objects](#toc1_3_4_)    \n",
+    "    - [Building objects](#toc1_3_5_)    \n",
+    "    - [Geometry plots](#toc1_3_6_)    \n",
+    "  - [Wind field](#toc1_4_)    \n",
+    "    - [Exposure conditions](#toc1_4_1_)    \n",
+    "    - [Read data](#toc1_4_2_)    \n",
+    "    - [Plot wind field](#toc1_4_3_)    \n",
+    "  - [Surface pressure, $C_p$](#toc1_5_)    \n",
+    "    - [Read data](#toc1_5_1_)    \n",
+    "      - [Wind tunnel data](#toc1_5_1_1_)    \n",
+    "    - [$C_p$ Plots](#toc1_5_2_)    \n",
+    "      - [Local pressure](#toc1_5_2_1_)    \n",
+    "- [Component and cladding load](#toc2_)    \n",
+    "  - [C&C pressure coefficients from codes](#toc2_1_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='toc1_2_'></a>[Basic definitions](#toc0_)"
    ]
   },
   {
@@ -69,10 +106,8 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a3f35768",
-   "metadata": {
-    "tags": []
-   },
+   "id": "dc4fcbd8",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -92,18 +127,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "25ed0a05",
    "metadata": {},
    "source": [
-    "### Files and directories"
+    "### <a id='toc1_2_1_'></a>[Files and directories](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "243664c3",
+   "id": "db40b1ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,18 +157,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "4387a398",
    "metadata": {},
    "source": [
-    "### General parameters"
+    "### <a id='toc1_2_2_'></a>[General parameters](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c43f39d7",
+   "id": "2b1b5e63",
    "metadata": {},
    "outputs": [
     {
@@ -160,12 +191,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "4a2c5c32",
+   "id": "f532141f",
    "metadata": {},
    "source": [
-    "### Scaling\n",
+    "### <a id='toc1_2_3_'></a>[Scaling](#toc0_)\n",
     "The geometric length scale is decided based on the optimal fitting the model in the wind tunnel.\n",
     "$$ \\lambda_L=1:100 $$\n",
     "\n",
@@ -183,21 +213,18 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "a65acec9",
+   "id": "819b04e6",
    "metadata": {},
    "source": [
-    "## Building Geometry"
+    "## <a id='toc1_3_'></a>[Building Geometry](#toc0_)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "9c6eae99",
    "metadata": {},
    "source": [
-    "### Basic geometry\n",
+    "### <a id='toc1_3_1_'></a>[Basic geometry](#toc0_)\n",
     "\n",
     "| Dimension | Unit |\n",
     "| --- | --- |\n",
@@ -210,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94f02808",
+   "id": "6ea17623",
    "metadata": {},
    "outputs": [
     {
@@ -248,21 +275,17 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "31ad4aa7",
    "metadata": {},
    "source": [
-    "### Basics of faces"
+    "### <a id='toc1_3_2_'></a>[Basics of faces](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "56bc2dbc",
-   "metadata": {
-    "tags": []
-   },
+   "id": "f8ab3671",
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -305,18 +328,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "d72be241",
    "metadata": {},
    "source": [
-    "### Zone dictionary"
+    "### <a id='toc1_3_3_'></a>[Zone dictionary](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b4a4dd6d",
+   "id": "724b5a92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,18 +392,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "0f7f13cd",
    "metadata": {},
    "source": [
-    "### Face objects"
+    "### <a id='toc1_3_4_'></a>[Face objects](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "adc99270",
+   "id": "4b253b84",
    "metadata": {},
    "outputs": [
     {
@@ -873,12 +892,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "ecbfb6bc",
    "metadata": {},
    "source": [
-    "### Building objects"
+    "### <a id='toc1_3_5_'></a>[Building objects](#toc0_)"
    ]
   },
   {
@@ -945,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "89715dcf",
+   "id": "059a8533",
    "metadata": {},
    "outputs": [
     {
@@ -1005,18 +1022,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "304a782e",
    "metadata": {},
    "source": [
-    "### Geometry plots"
+    "### <a id='toc1_3_6_'></a>[Geometry plots](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "00841149",
+   "id": "f670bb24",
    "metadata": {},
    "outputs": [
     {
@@ -1070,25 +1085,22 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "84897859",
+   "id": "d650b0b1",
    "metadata": {},
    "source": [
-    "## Wind field\n",
+    "## <a id='toc1_4_'></a>[Wind field](#toc0_)\n",
     "\n",
-    "### Exposure conditions\n",
+    "### <a id='toc1_4_1_'></a>[Exposure conditions](#toc0_)\n",
     "\n",
     "Tunnel configurations for the considered exposures"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "61a6cb28",
    "metadata": {},
    "source": [
-    "### Read data"
+    "### <a id='toc1_4_2_'></a>[Read data](#toc0_)"
    ]
   },
   {
@@ -1196,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "432059b2",
+   "id": "15d75ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1243,18 +1255,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "a1b00294",
    "metadata": {},
    "source": [
-    "### Plot wind field"
+    "### <a id='toc1_4_3_'></a>[Plot wind field](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7a11617e",
+   "id": "c68b835d",
    "metadata": {},
    "outputs": [
     {
@@ -1289,21 +1299,18 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "34b58683",
+   "id": "4699e9b6",
    "metadata": {},
    "source": [
-    "## Surface pressure, $C_p$"
+    "## <a id='toc1_5_'></a>[Surface pressure, $C_p$](#toc0_)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "e7593e1d",
    "metadata": {},
    "source": [
-    "### Read data"
+    "### <a id='toc1_5_1_'></a>[Read data](#toc0_)"
    ]
   },
   {
@@ -1847,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f069318e",
+   "id": "19a02d5f",
    "metadata": {},
    "outputs": [
     {
@@ -1926,36 +1933,32 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "0220a196",
+   "id": "a971440c",
    "metadata": {},
    "source": [
-    "#### Wind tunnel data"
+    "#### <a id='toc1_5_1_1_'></a>[Wind tunnel data](#toc0_)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "851c9faa",
+   "id": "7d6e2e89",
    "metadata": {},
    "source": [
-    "### $C_p$ Plots"
+    "### <a id='toc1_5_2_'></a>[$C_p$ Plots](#toc0_)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "f0a5c65f",
    "metadata": {},
    "source": [
-    "#### Local pressure"
+    "#### <a id='toc1_5_2_1_'></a>[Local pressure](#toc0_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9ebd3670",
+   "id": "fae85f64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,14 +1979,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "cb8ebac7",
    "metadata": {},
    "source": [
-    "# Component and cladding load\n",
+    "# <a id='toc2_'></a>[Component and cladding load](#toc0_)\n",
     "\n",
-    "## C&C pressure coefficients from codes"
+    "## <a id='toc2_1_'></a>[C&C pressure coefficients from codes](#toc0_)"
    ]
   },
   {
