--- a/src/notebooks/FFS/FFS_SSL.ipynb
+++ b/src/notebooks/FFS/FFS_SSL.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,6 +392,86 @@
     "print(variables['YourVariable'][zones[0].indices()])\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def average_data(dir, fileStartsWith, outFile, axis='y', outCoordVal=0.0, convertNaNtoZero=False,\n",
+    "                 fields_dont_avg = ['Points:0', 'Points:1', 'Points:2'],\n",
+    "                 ):\n",
+    "    # list all files in the directory that start with fileStartsWith\n",
+    "    files = [f for f in os.listdir(dir) if f.startswith(fileStartsWith)]\n",
+    "    \n",
+    "    df_avg = pd.read_csv(dir + files[0])\n",
+    "    print(\"Reading file \" + files[0])\n",
+    "    if axis == 'x':\n",
+    "        df_avg['Points:0'] = outCoordVal\n",
+    "    elif axis == 'y':\n",
+    "        df_avg['Points:1'] = outCoordVal\n",
+    "    elif axis == 'z':\n",
+    "        df_avg['Points:2'] = outCoordVal\n",
+    "    else:\n",
+    "        raise ValueError(\"axis must be one of ['x','y','z']\")\n",
+    "    \n",
+    "    # replace nan with 0.0 and warn the user how many nans were replaced\n",
+    "    if convertNaNtoZero and df_avg.isnull().values.any():\n",
+    "        percentNAN = df_avg.isnull().sum().sum() / df_avg.size\n",
+    "        print(\"WARNING: \" + str(percentNAN*100) + \"% of the data is in file \" + files[0] + \" is nan. Replacing with 0.0\")\n",
+    "        df_avg = df_avg.fillna(0.0)    \n",
+    "    \n",
+    "    N = 1.0\n",
+    "    # loop over the rest of the files\n",
+    "    for i in range(1,len(files)):\n",
+    "        print(\"Reading file \" + files[i])\n",
+    "        df = pd.read_csv(dir + files[i])\n",
+    "        \n",
+    "        if convertNaNtoZero and df.isnull().values.any():\n",
+    "            percentNAN = df.isnull().sum().sum() / df.size\n",
+    "            print(\"WARNING: \" + str(percentNAN*100) + \"% of the data in file \" + files[i] + \" is nan. Replacing with 0.0\")\n",
+    "            df = df.fillna(0.0)\n",
+    "            \n",
+    "        # loop over the fields in the file\n",
+    "        for field in df.columns:\n",
+    "            if field in fields_dont_avg:\n",
+    "                continue\n",
+    "            else:\n",
+    "                df_avg[field] = (N*df_avg[field] + df[field]) / (N+1)\n",
+    "            \n",
+    "        N += 1.0\n",
+    "    \n",
+    "    # use scientific notation when saving the file\n",
+    "    df_avg.to_csv(outFile, index=False, float_format='%.6E')\n",
+    "    \n",
+    "    # return df_avg\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading file FBL_data_0.csv\n",
+      "Reading file FBL_data_1.csv\n",
+      "Reading file FBL_data_2.csv\n",
+      "Reading file FBL_data_3.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "dir = r'D:\\tempData_depot\\simData_FFS\\FFS_ABL_01_old\\extracts\\lab/'\n",
+    "fileStartsWith = 'FBL_data'\n",
+    "outFile = r'D:\\tempData_depot\\simData_FFS\\FFS_ABL_01_old/extracts/FBL_data_avg.csv'\n",
+    "\n",
+    "average_data(dir, fileStartsWith, outFile)"
    ]
   }
  ],
